--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "express": "^4.18.2",
     "isomorphic-fetch": "^3.0.0",
     "nodemon": "^3.0.1"
