--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns-tz": "^2.0.0",
     "express": "^4.18.2",
     "isomorphic-fetch": "^3.0.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "pm2": "^5.3.0"
   }
 }
